# athena

./: .gitignore  README.md  pyproject.toml
examples/: memory_leak.py  perf_issue.py  simple_bug.py
src/athena/: __init__.py  __main__.py
src/athena/agent/: conversation.py  llm_client.py  system_prompt.py  tool_executor.py  tool_registry.py
src/athena/cli/: main.py  runner.py
src/athena/core/: breakpoint_manager.py  debugger.py  expression_evaluator.py  frame_inspector.py  source_provider.py  static_analyzer.py  watch_manager.py
src/athena/memory/: cuda_memory.py  leak_detector.py  python_memory.py  snapshot_manager.py
src/athena/repl/: commands.py  input_handler.py  output_formatter.py  session.py
src/athena/state/: __init__.py  models.py  store.py
src/athena/utils/: config.py  safe_repr.py  truncation.py
tests/: conftest.py
tests/agent/: test_conversation.py  test_llm_client.py  test_tool_executor_perf.py  test_tool_registry.py
tests/cli/: test_runner_restore_queue.py
tests/core/: test_debugger.py  test_expression_evaluator.py  test_frame_inspector.py  test_safe_repr.py  test_source_provider.py  test_static_analyzer.py  test_watch_manager.py
tests/memory/: test_cuda_memory.py  test_python_memory.py
tests/perf/: test_perf_checkpoints.py
tests/repl/: test_commands.py  test_session_perf_prompting.py  test_session_prompting.py
tests/state/: test_store.py
